# seqt2

./: CMakeLists.txt  CMakePresets.json  main.cpp
cl/: kernels.cl
docs/: notes.txt
include/: nth_element_struct.hpp  seqt.hpp
src/: seqt.cpp
